# github-actions-examples

./: .pep8speaks.yml  LICENSE  pyproject.toml
.github/workflows/: pylint.yml  python-app.yml
mathutils/: __init__.py  calc.py
src/mathutils/: __init__.py
tests/: test_calc.py
