[build-system]
requires = ["setuptools >= 68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mathutils"
version = "0.1.0"
description = "Simple math utility functions for GitHub Actions examples"
requires-python = ">= 3.9"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = ["pytest"]
